# ps2rendering

./: .gitignore  CMakeLists.txt  TextureLoader.cpp  TextureLoader.h  copy_assets.cmake  main.c  main.cpp  resetPS2.sh  runPCSX2.sh  runPS2.sh
toolchain/: PS2Toolchain.cmake  PS2Toolchain_edit.cmake
